Update build of slides

--- a/slides/kube-selfpaced.yml.html
+++ b/slides/kube-selfpaced.yml.html
@@ -32,7 +32,7 @@ Deploying and Scaling Microservices<br/>with Docker and Kubernetes<br/>
 
 ```
 
-These slides have been built from commit: 9b28466
+These slides have been built from commit: 1ad31b6
 
 
 [common/title.md](https://github.com/ctas582/container.training.git/tree/master/slides/common/title.md)]
@@ -482,7 +482,7 @@ If anything goes wrong — ask for help!
 
 - Use something like
   [Play-With-Docker](http://play-with-docker.com/) or
-  [Play-With-Kubernetes](https://medium.com/@marcosnils/introducing-pwk-play-with-k8s-159fcfeb787b)
+  [Play-With-Kubernetes](https://training.play-with-kubernetes.com/)
 
   Zero setup effort; but environment are short-lived and
   might have limited resources
